# ChangeLog for net-analyzer/icinga
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga/ChangeLog,v 1.7 2011/12/03 07:26:17 prometheanfire Exp $

  03 Dec 2011; mthode <mthode@gentoo.org> -icinga-1.5.1.ebuild,
  -icinga-1.5.1-r1.ebuild:
  removed older ebuilds

*icinga-1.6.1 (02 Dec 2011)

  02 Dec 2011; mthode <mthode@gentoo.org> +icinga-1.6.1.ebuild,
  files/icinga-init.d-2, files/icinga-apache.conf:
  moved /var/icinga to /var/lib/icinga; init updated to remove redundant config
  check (done by default now); add icinga to nagios group all the time; moved
  loging around; removed api use flag

  22 Nov 2011; mthode <mthode@gentoo.org> -icinga-1.5.1-r2.ebuild:
  removed icinga-1.5.1-r2.ebuild for init.d error (fix is in r3)

*icinga-1.5.1-r3 (22 Nov 2011)

  22 Nov 2011; mthode <mthode@gentoo.org> +icinga-1.5.1-r3.ebuild,
  files/icinga-init.d-2:
  changed default install from /var/icinga to /var/lib/icinga

*icinga-1.5.1-r2 (21 Nov 2011)

  21 Nov 2011; mthode <mthode@gentoo.org> +icinga-1.5.1-r2.ebuild,
  +files/icinga-init.d-2:
  Changed directory perms and file locations and initscript, see bug 391143 for
  more info

*icinga-1.5.1-r1 (15 Nov 2011)

  15 Nov 2011; mthode <mthode@gentoo.org> +icinga-1.5.1-r1.ebuild,
  +files/fix-prestripped-binaries.patch:
  Revbump to fix prestripped-binaries

*icinga-1.5.1 (15 Nov 2011)

  15 Nov 2011; mthode <mthode@gentoo.org> +files/icinga-apache.conf,
  +files/icinga-conf.d, +files/icinga-init.d, +files/icinga-lighty.conf,
  +files/ido2db-conf.d, +icinga-1.5.1.ebuild, +files/ido2db-init.d,
  +metadata.xml:
  New ebuild for icinga. Writen by Prometheanfire. Fixes bug #271339.
