@@ -1,17 +1,18 @@
 #!/sbin/runscript
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga/files/ido2db-init.d,v 1.1 2011/11/15 00:14:29 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga/files/ido2db-init.d,v 1.2 2011/12/04 19:27:46 prometheanfire Exp $
 
 IDO2DBBIN="/usr/sbin/ido2db"
-SOCKET="/var/icinga/ido.sock"
+IDO2DBSOCKET="/var/lib/icinga/ido.sock"
+IDO2DBLOCK="/var/lib/icinga/ido2db.lock"
 
 function check() {
-	if [ -S "${SOCKET}" ] ; then
-		ewarn "Strange, the socket file already exist in \"${SOCKET}\""
+	if [ -S "${IDO2DBSOCKET}" ] ; then
+		ewarn "Strange, the socket file already exist in \"${IDO2DBSOCKET}\""
 		ewarn "it will be removed now and re-created by ido2db"
 		ewarn "BUT please make your checks."
-		rm -f "${SOCKET}"
+		rm -f "${IDO2DBSOCKET}"
 	fi
 }
 
@@ -24,12 +25,12 @@ depend() {
 start() {
 	check
 	ebegin "Starting ido2db"
-	start-stop-daemon --quiet --start --pidfile /var/icinga/ido2db.lock --startas ${IDO2DBBIN} -- -c ${IDO2DBCFG}
+	start-stop-daemon --start --exec ${IDO2DBBIN} --pidfile ${IDO2DBLOCK} --name ${IDO2DBBIN} -- -c ${IDO2DBCFG}
 	eend $?
 }
 
 stop() {
 	ebegin "Stopping ido2db"
-	start-stop-daemon --quiet --stop --pidfile /var/icinga/ido2db.lock --name /usr/sbin/ido2db
+	start-stop-daemon --stop --exec ${IDO2DBBIN} --pidfile ${IDO2DBLOCK} --name ${IDO2DBBIN}
 	eend $?
 }
