@@ -4,7 +4,6 @@
 	<herd>no-herd</herd>
 	<longdescription lang="en">A rebuild of nagios from the ground up</longdescription>
 	<use>
-		<flag name="api">Adds support for the icinga API</flag>
 		<flag name="idoutils">Adds DB support</flag>
 		<flag name="lighttpd">Adds Lighttpd support</flag>
 		<flag name="plugins">Adds support for nagios plugins</flag>
