@@ -1,6 +1,13 @@
 # ChangeLog for net-analyzer/icinga
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga/ChangeLog,v 1.7 2011/12/03 07:26:17 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga/ChangeLog,v 1.8 2011/12/04 19:27:45 prometheanfire Exp $
+
+*icinga-1.6.1-r1 (04 Dec 2011)
+
+  04 Dec 2011; mthode <mthode@gentoo.org> -icinga-1.6.1.ebuild,
+  +icinga-1.6.1-r1.ebuild, files/icinga-init.d-2, files/ido2db-init.d:
+  fixed error in old ido2db-init and updated icinga-init to be in line with new
+  openrc
 
   03 Dec 2011; mthode <mthode@gentoo.org> -icinga-1.5.1.ebuild,
   -icinga-1.5.1-r1.ebuild:
